// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`timeline/TrackContextMenu selected global track matches the snapshot of a global non-process track 1`] = `
<nav
  class="react-contextmenu timelineTrackContextMenu"
  role="menu"
  style="position: fixed; opacity: 0; pointer-events: none;"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Hide other screenshot tracks
  </div>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Hide 
    "Screenshots"
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item timelineTrackContextMenuItem checkable checked"
      role="menuitem"
      tabindex="-1"
      title="Screenshots"
    >
      <span>
        Screenshots
      </span>
      <span
        class="timelineTrackContextMenuSpacer"
      />
    </div>
  </div>
</nav>
`;

exports[`timeline/TrackContextMenu selected global track matches the snapshot of a global track 1`] = `
<nav
  class="react-contextmenu timelineTrackContextMenu"
  role="menu"
  style="position: fixed; opacity: 0; pointer-events: none;"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Only show 
    "Content Process"
  </div>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Only show this process group
  </div>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Hide 
    "Content Process"
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item timelineTrackContextMenuItem checkable checked"
      role="menuitem"
      tabindex="-1"
      title="Content Process (Process ID: 222)"
    >
      <span>
        Content Process
      </span>
      <span
        class="timelineTrackContextMenuSpacer"
      />
      <span
        class="timelineTrackContextMenuPid"
      >
        (
        222
        )
      </span>
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item checkable indented checked"
      role="menuitem"
      tabindex="-1"
    >
      DOM Worker
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item checkable indented checked"
      role="menuitem"
      tabindex="-1"
    >
      Style
    </div>
  </div>
</nav>
`;

exports[`timeline/TrackContextMenu selected global track network track will be displayed when a number is not set for ctxId 1`] = `
<nav
  class="react-contextmenu timelineTrackContextMenu"
  role="menu"
  style="position: fixed; opacity: 0; pointer-events: none;"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Hide 
    "Process 0"
  </div>
  <div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item timelineTrackContextMenuItem checkable checked"
      role="menuitem"
      tabindex="-1"
      title="Process 0 (Process ID: 0)"
    >
      <span>
        Process 0
      </span>
      <span
        class="timelineTrackContextMenuSpacer"
      />
      <span
        class="timelineTrackContextMenuPid"
      >
        (
        0
        )
      </span>
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item checkable indented checked"
      role="menuitem"
      tabindex="-1"
    >
      Network
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item checkable indented checked"
      role="menuitem"
      tabindex="-1"
    >
      Empty
    </div>
  </div>
</nav>
`;

exports[`timeline/TrackContextMenu selected local track matches the snapshot of a local track 1`] = `
<nav
  class="react-contextmenu timelineTrackContextMenu"
  role="menu"
  style="position: fixed; opacity: 0; pointer-events: none;"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Only show 
    "DOM Worker"
  </div>
  <div
    aria-disabled="false"
    class="react-contextmenu-item"
    role="menuitem"
    tabindex="-1"
  >
    Hide 
    "DOM Worker"
  </div>
  <div
    class="react-contextmenu-separator"
  />
  <div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item timelineTrackContextMenuItem checkable checked"
      role="menuitem"
      tabindex="-1"
      title="Content Process (Process ID: 222)"
    >
      <span>
        Content Process
      </span>
      <span
        class="timelineTrackContextMenuSpacer"
      />
      <span
        class="timelineTrackContextMenuPid"
      >
        (
        222
        )
      </span>
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item checkable indented checked"
      role="menuitem"
      tabindex="-1"
    >
      DOM Worker
    </div>
    <div
      aria-disabled="false"
      class="react-contextmenu-item checkable indented checked"
      role="menuitem"
      tabindex="-1"
    >
      Style
    </div>
  </div>
</nav>
`;
